--- a/src/components/Nav-Bar/navBar.css
+++ b/src/components/Nav-Bar/navBar.css
@@ -60,10 +60,7 @@
   transition-duration: 0.3s ease;
 } */
 
-.Projects-Container{
-    display: flex;
-    align-content: center;
-}
+
 
 
 @media screen and (max-width: 699px) {
