--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -42,7 +42,7 @@
     box-shadow:0 5px 10px rgba(0,0,0,0.19), 0 3px 2px rgba(0,0,0,0.23);
     justify-content: center;
     align-items: center;
-    padding: 0.4vmax 2vmax;
+    /* padding: 0.4vmax 2vmax; */
     z-index: -1;
     height: 3vmax;
     overflow: visible;
@@ -69,7 +69,7 @@
 }
 
 
-.Projects-Container{
+.projects-container{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -85,12 +85,31 @@
 
 @media screen and (max-width: 1024px) {
    
-    .Projects-Container{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
+    .projects-container{
+       flex-direction: column;
         align-items: center;
     }
+
+    .untrodden-logo{
+        height: 14vmax;
+        transition-duration: 0.3s;
+        
+     }
+    
+     .bootcamper-logo{
+        width: 18vmax;
+        transition-duration: 0.3s;
+        
+     }
+    
+     .fire-logo{
+        height: 14vmax;
+        transition-duration: 0.3s;
+        margin-bottom: 1.5vmax;
+        
+     }
+
+     
 
 }
 
